# birdclassifier

./: .bazelrc  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  BirdSpeciesClassifier.pro  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  CONTRIBUTING.md  ComparisonWindow.cpp  ComparisonWindow.hxx  ComparisonWindow.ui  INSTALL.md  Images.qrc  LICENSE  LearningDialog.cpp  LearningDialog.hxx  LearningDialog.ui  MODERNIZATION_PLAN.md  MainWindow.cpp  MainWindow.hxx  MainWindow.ui  MyListView.hxx  README  README.md  SamplesConverter.cpp  SamplesList.hxx  SettingsDialog.cpp  SettingsDialog.hxx  SettingsDialog.ui  TODO  USAGE  WORKSPACE  vcpkg.json
.beads/: issues.jsonl
Cutter/: Makefile  cutter.cpp
Drawers/: AudioDraw.cpp  AudioDraw.hxx  DrawPlugin.cpp  DrawPlugin.hxx  EnergyDraw.cpp  EnergyDraw.hxx  EnergyDraw.ui  EnergyDrawWidget.cpp  EnergyDrawWidget.hxx  SignalDraw.cpp  SignalDraw.hxx  SignalDraw.ui  SpectroDraw.cpp  SpectroDraw.hxx  SpectroDraw.ui  Spectrogram.cpp  Spectrogram.hxx  drawplugin.pro
RtAudio/: RtAudio.cpp  RtAudio.h
bazel/: cli_main.cpp
detect/: Audio.cpp  Audio.hxx  Files.cpp  Files.hxx  Filter.cpp  Filter.hxx  Manager.cpp  Manager.hxx  detect.cpp  detect.hxx  myFilter.m
mpglib/: README  common.c  dct64_i386.c  decode_i386.c  huffman.h  interface.c  layer3.c  main.c  mpg123.h  mpglib.h  tabinit.c
tests/: BUILD.bazel  CMakeLists.txt  README.md  test_audio.cpp  test_main.cpp
